--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,9 @@
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-google-oauth20": "^2.0.0",
     "validator": "^13.7.0"
   }
 }
